excluded/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test123
  labels:
    foo: bar
