excluded/tests/generate/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: test123
  name: test
data:
  foo-value: bar
