excluded/tests/generate/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1
kind: Test
metadata:
  name: slos
policies:
  - ../../policies/generate.yaml
resources:
  - ../../resources/namespace.yaml
results:
  - policy: generate-foo-configmap
    isGeneratingPolicy: true

    kind: Namespace
    resources:
      - test123

    result: pass

    generatedResource: configmap.yaml
